--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-        <!--AMQP, including RabbitMQ-->
+        <!--AMQP-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
